--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title> Hello World!</title>
     <meta author="Katie"> 
     <link rel="stylesheet" href="/css/style.css">
-    <script>type="text.javascript" src="/js/myscript.js"</script>
+    <script type="text/javascript" src="/js/myscript.js"></script>
 </head>
 <body>
     <br>
