--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <head lang="en">
     <title> Hello World!</title>
     <meta author="Katie Litchen"> 
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
