updated for activity 3

--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<!--https://kmlitchen.github.io/_unit-1/-->
-<!--Created By: Katie Litchen 22Jan2026-->
+<!--Created By: Katie Litchen 04Feb2026-->
 
 <!DOCTYPE html>
 
@@ -10,13 +9,7 @@
 </head>
 
 <body>
-    <br>
-    <p id="world" style="color: rgb(0, 162, 255);background-color: rgb(66, 66, 66);"> Hello World!</p>
-    <a href="https:\\www.wisc.edu">UW Madison Website</a>
-    <div>
-        <h1 class="headline"> Big News:</h1>
-        <span>School's Cancelled Friday!</span>
+    <div id = "mydiv">
     </div> 
-    <script type="text/javascript" src="js/main.js"></script>
-<span> ...For REAL!!!</span>
+    <script type="text/javascript" src="js/main_with_debug.js"></script>
 </body>
